--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -2,9 +2,6 @@
 @use "common.scss";
 
 .login-page {
-    display: flex;
-    justify-content: center;
-    max-width: 1178px;
     background-color: common.$milk;
 }
 
@@ -39,37 +36,17 @@
         height: 1.5rem;
     }
 }
-.footer-small {
-    display: flex;
-    justify-content: center;
-    padding-inline: 1rem;
-    padding-top: 1rem;
-    max-width: 27.5rem;
-    margin: auto;
-    gap: 1rem;
-    overflow: scroll;
-    overflow-y: hidden;
-    white-space: nowrap;
-    &__link {
-        font-weight: 400;
-        color: common.$licorice !important;
-    }
-}
 
 @media screen and (min-width: 600px) {
     .login-page {
-        margin-top: 3rem;
         background-color: transparent;
+        margin-top: 3rem;
+        display: flex;
+        justify-content: center;
+        max-width: 1178px;
     }
     .login-page {
         padding: 2.5rem;
-    }
-    .footer-small {
-        margin: 0;
-        padding: 0;
-        max-width: 100%;
-        overflow: hidden;
-        margin-top: 2rem;
     }
     .company-logos {
         margin-top: 0;
